--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,11 @@ services:
     image: postgres
     restart: always
     environment:
-      POSTGRES_PASSWORD: 1234
+      POSTGRES_PASSWORD: "postgres"
     volumes:
       - pgdata:/var/lib/postgresql/data
+    ports:
+      - "2222:5432"
 
 volumes:
   pgdata:
