Adicionando paginacao, modificando o crud para jpa, adicionando o response, exceptions

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,6 +19,9 @@ spring:
     sql-migration-separator: __
     sql-migration-suffixes: .sql
 
+  jackson:
+    default-property-inclusion: non-null
+
 logging:
   level:
     org.flywaydb: DEBUG
