Adicionando as tabelas de purchase, swagger, validações customizadas, criando mapper, adicionando migration, criando a classe de eventos

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,3 +25,9 @@ spring:
 logging:
   level:
     org.flywaydb: DEBUG
+
+springdoc:
+  api-docs:
+    enabled: true
+  swagger-ui:
+    enabled: true
