--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -3,8 +3,13 @@ server:
 
 spring:
 
+  datasource:
+    url: jdbc:postgresql://0.0.0.0:2222/postgrestest
+    username: postgres
+    password: postgres
+
   profiles:
-    active: dev
+    active: test
 
   jpa:
     hibernate:
